Type:
Bug
Priority:
Critical
Resolution:
Fixed
Affects Version/s:
10.11
InnoDB fails to start the server when the user specified undo tablespaces is greater than opened
undo tablespaces. InnoDB should throw warning instead of error and also it should reflect
the number of opened undo tablespaces as innodb_undo_tablespaces variable.
{"report":{"fcp":694.8000001907349,"ttfb":176.5,"pageVisibility":"visible","entityId":117429,"key":"jira.project.issue.view-issue","isInitial":true,"threshold":1000,"elementTimings":{},"userDeviceMemory":8,"userDeviceProcessors":64,"apdex":1,"journeyId":"be071d26-04bf-4554-b7eb-c4513501cf43","navigationType":0,"readyForUser":761.3999996185303,"redirectCount":0,"resourceLoadedEnd":843.8999996185303,"resourceLoadedStart":181.5999994277954,"resourceTiming":[{"duration":7.100000381469727,"initiatorType":"link","name":"https://jira.mariadb.org/s/2c21342762a6a02add1c328bed317ffd-CDN/lu2cib/820016/12ta74/0a8bac35585be7fc6c9cc5a0464cd4cf/_/download/contextbatch/css/_super/batch.css","startTime":181.5999994277954,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":181.5999994277954,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":188.69999980926514,"responseStart":0,"secureConnectionStart":0},{"duration":7,"initiatorType":"link","name":"https://jira.mariadb.org/s/7ebd35e77e471bc30ff0eba799ebc151-CDN/lu2cib/820016/12ta74/2bf333562ca6724060a9d5f1535471f6/_/download/contextbatch/css/jira.browse.project,project.issue.navigator,jira.view.issue,jira.general,jira.global,atl.general,-_super/batch.css?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&slack-enabled=true","startTime":181.89999961853027,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":181.89999961853027,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":188.89999961853027,"responseStart":0,"secureConnectionStart":0},{"duration":63.5,"initiatorType":"script","name":"https://jira.mariadb.org/s/0917945aaa57108d00c5076fea35e069-CDN/lu2cib/820016/12ta74/0a8bac35585be7fc6c9cc5a0464cd4cf/_/download/contextbatch/js/_super/batch.js?locale=en","startTime":182.0999994277954,"connectEnd":182.0999994277954,"connectStart":182.0999994277954,"domainLookupEnd":182.0999994277954,"domainLookupStart":182.0999994277954,"fetchStart":182.0999994277954,"redirectEnd":0,"redirectStart":0,"requestStart":182.0999994277954,"responseEnd":245.5999994277954,"responseStart":245.5999994277954,"secureConnectionStart":182.0999994277954},{"duration":157.80000019073486,"initiatorType":"script","name":"https://jira.mariadb.org/s/2d8175ec2fa4c816e8023260bd8c1786-CDN/lu2cib/820016/12ta74/2bf333562ca6724060a9d5f1535471f6/_/download/contextbatch/js/jira.browse.project,project.issue.navigator,jira.view.issue,jira.general,jira.global,atl.general,-_super/batch.js?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&locale=en&slack-enabled=true","startTime":182.19999980926514,"connectEnd":182.19999980926514,"connectStart":182.19999980926514,"domainLookupEnd":182.19999980926514,"domainLookupStart":182.19999980926514,"fetchStart":182.19999980926514,"redirectEnd":0,"redirectStart":0,"requestStart":182.19999980926514,"responseEnd":340,"responseStart":340,"secureConnectionStart":182.19999980926514},{"duration":161,"initiatorType":"script","name":"https://jira.mariadb.org/s/a9324d6758d385eb45c462685ad88f1d-CDN/lu2cib/820016/12ta74/c92c0caa9a024ae85b0ebdbed7fb4bd7/_/download/contextbatch/js/atl.global,-_super/batch.js?locale=en","startTime":182.5,"connectEnd":182.5,"connectStart":182.5,"domainLookupEnd":182.5,"domainLookupStart":182.5,"fetchStart":182.5,"redirectEnd":0,"redirectStart":0,"requestStart":182.5,"responseEnd":343.5,"responseStart":343.5,"secureConnectionStart":182.5},{"duration":161.19999980926514,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2cib/820016/12ta74/1.0/_/download/batch/jira.webresources:calendar-en/jira.webresources:calendar-en.js","startTime":182.69999980926514,"connectEnd":182.69999980926514,"connectStart":182.69999980926514,"domainLookupEnd":182.69999980926514,"domainLookupStart":182.69999980926514,"fetchStart":182.69999980926514,"redirectEnd":0,"redirectStart":0,"requestStart":182.69999980926514,"responseEnd":343.8999996185303,"responseStart":343.8999996185303,"secureConnectionStart":182.69999980926514},{"duration":161.19999980926514,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2cib/820016/12ta74/1.0/_/download/batch/jira.webresources:calendar-localisation-moment/jira.webresources:calendar-localisation-moment.js","startTime":182.89999961853027,"connectEnd":182.89999961853027,"connectStart":182.89999961853027,"domainLookupEnd":182.89999961853027,"domainLookupStart":182.89999961853027,"fetchStart":182.89999961853027,"redirectEnd":0,"redirectStart":0,"requestStart":182.89999961853027,"responseEnd":344.0999994277954,"responseStart":344.0999994277954,"secureConnectionStart":182.89999961853027},{"duration":204,"initiatorType":"link","name":"https://jira.mariadb.org/s/b04b06a02d1959df322d9cded3aeecc1-CDN/lu2cib/820016/12ta74/a2ff6aa845ffc9a1d22fe23d9ee791fc/_/download/contextbatch/css/jira.global.look-and-feel,-_super/batch.css","startTime":183,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":183,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":387,"responseStart":0,"secureConnectionStart":0},{"duration":161.19999980926514,"initiatorType":"script","name":"https://jira.mariadb.org/rest/api/1.0/shortcuts/820016/47140b6e0a9bc2e4913da06536125810/shortcuts.js?context=issuenavigation&context=issueaction","startTime":183.30000019073486,"connectEnd":183.30000019073486,"connectStart":183.30000019073486,"domainLookupEnd":183.30000019073486,"domainLookupStart":183.30000019073486,"fetchStart":183.30000019073486,"redirectEnd":0,"redirectStart":0,"requestStart":183.30000019073486,"responseEnd":344.5,"responseStart":344.5,"secureConnectionStart":183.30000019073486},{"duration":203.80000019073486,"initiatorType":"link","name":"https://jira.mariadb.org/s/3ac36323ba5e4eb0af2aa7ac7211b4bb-CDN/lu2cib/820016/12ta74/d176f0986478cc64f24226b3d20c140d/_/download/contextbatch/css/com.atlassian.jira.projects.sidebar.init,-_super,-project.issue.navigator,-jira.view.issue/batch.css?jira.create.linked.issue=true","startTime":183.39999961853027,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":183.39999961853027,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":387.19999980926514,"responseStart":0,"secureConnectionStart":0},{"duration":161.5,"initiatorType":"script","name":"https://jira.mariadb.org/s/5d5e8fe91fbc506585e83ea3b62ccc4b-CDN/lu2cib/820016/12ta74/d176f0986478cc64f24226b3d20c140d/_/download/contextbatch/js/com.atlassian.jira.projects.sidebar.init,-_super,-project.issue.navigator,-jira.view.issue/batch.js?jira.create.linked.issue=true&locale=en","startTime":183.5999994277954,"connectEnd":183.5999994277954,"connectStart":183.5999994277954,"domainLookupEnd":183.5999994277954,"domainLookupStart":183.5999994277954,"fetchStart":183.5999994277954,"redirectEnd":0,"redirectStart":0,"requestStart":183.5999994277954,"responseEnd":345.0999994277954,"responseStart":345.0999994277954,"secureConnectionStart":183.5999994277954},{"duration":658.3000001907349,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2cib/820016/12ta74/1.0/_/download/batch/jira.webresources:bigpipe-js/jira.webresources:bigpipe-js.js","startTime":184.5,"connectEnd":184.5,"connectStart":184.5,"domainLookupEnd":184.5,"domainLookupStart":184.5,"fetchStart":184.5,"redirectEnd":0,"redirectStart":0,"requestStart":184.5,"responseEnd":842.8000001907349,"responseStart":842.8000001907349,"secureConnectionStart":184.5},{"duration":655.3000001907349,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2cib/820016/12ta74/1.0/_/download/batch/jira.webresources:bigpipe-init/jira.webresources:bigpipe-init.js","startTime":188.5999994277954,"connectEnd":188.5999994277954,"connectStart":188.5999994277954,"domainLookupEnd":188.5999994277954,"domainLookupStart":188.5999994277954,"fetchStart":188.5999994277954,"redirectEnd":0,"redirectStart":0,"requestStart":188.5999994277954,"responseEnd":843.8999996185303,"responseStart":843.8999996185303,"secureConnectionStart":188.5999994277954},{"duration":444.6000003814697,"initiatorType":"xmlhttprequest","name":"https://jira.mariadb.org/rest/webResources/1.0/resources","startTime":398.5999994277954,"connectEnd":398.5999994277954,"connectStart":398.5999994277954,"domainLookupEnd":398.5999994277954,"domainLookupStart":398.5999994277954,"fetchStart":398.5999994277954,"redirectEnd":0,"redirectStart":0,"requestStart":398.5999994277954,"responseEnd":843.1999998092651,"responseStart":843.1999998092651,"secureConnectionStart":398.5999994277954},{"duration":176.19999980926514,"initiatorType":"script","name":"https://www.google-analytics.com/analytics.js","startTime":689,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":689,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":865.1999998092651,"responseStart":0,"secureConnectionStart":0},{"duration":109.80000019073486,"initiatorType":"link","name":"https://jira.mariadb.org/s/d5715adaadd168a9002b108b2b039b50-CDN/lu2cib/820016/12ta74/be4b45e9cec53099498fa61c8b7acba4/_/download/contextbatch/css/jira.project.sidebar,-_super,-project.issue.navigator,-jira.general,-jira.browse.project,-jira.view.issue,-jira.global,-atl.general,-com.atlassian.jira.projects.sidebar.init/batch.css?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&slack-enabled=true","startTime":846.5999994277954,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":846.5999994277954,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":956.3999996185303,"responseStart":0,"secureConnectionStart":0},{"duration":98.10000038146973,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2cib/820016/12ta74/e65b778d185daf5aee24936755b43da6/_/download/contextbatch/js/browser-metrics-plugin.contrib,-_super,-project.issue.navigator,-jira.view.issue,-atl.general/batch.js?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&slack-enabled=true","startTime":847.5999994277954,"connectEnd":847.5999994277954,"connectStart":847.5999994277954,"domainLookupEnd":847.5999994277954,"domainLookupStart":847.5999994277954,"fetchStart":847.5999994277954,"redirectEnd":0,"redirectStart":0,"requestStart":847.5999994277954,"responseEnd":945.6999998092651,"responseStart":945.6999998092651,"secureConnectionStart":847.5999994277954},{"duration":101.20000076293945,"initiatorType":"script","name":"https://jira.mariadb.org/s/097ae97cb8fbec7d6ea4bbb1f26955b9-CDN/lu2cib/820016/12ta74/be4b45e9cec53099498fa61c8b7acba4/_/download/contextbatch/js/jira.project.sidebar,-_super,-project.issue.navigator,-jira.general,-jira.browse.project,-jira.view.issue,-jira.global,-atl.general,-com.atlassian.jira.projects.sidebar.init/batch.js?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&locale=en&slack-enabled=true","startTime":848.0999994277954,"connectEnd":848.0999994277954,"connectStart":848.0999994277954,"domainLookupEnd":848.0999994277954,"domainLookupStart":848.0999994277954,"fetchStart":848.0999994277954,"redirectEnd":0,"redirectStart":0,"requestStart":848.0999994277954,"responseEnd":949.3000001907349,"responseStart":949.3000001907349,"secureConnectionStart":848.0999994277954}],"fetchStart":0,"domainLookupStart":0,"domainLookupEnd":0,"connectStart":0,"connectEnd":0,"requestStart":19,"responseStart":176,"responseEnd":181,"domLoading":179,"domInteractive":919,"domContentLoadedEventStart":919,"domContentLoadedEventEnd":956,"domComplete":1771,"loadEventStart":1771,"loadEventEnd":1773,"userAgent":"Mozilla/5.0 AppleWebKit/537.36 (KHTML, like Gecko; compatible; ClaudeBot/1.0; +claudebot@anthropic.com)","marks":[{"name":"bigPipe.sidebar-id.start","time":905.3000001907349},{"name":"bigPipe.sidebar-id.end","time":906.0999994277954},{"name":"bigPipe.activity-panel-pipe-id.start","time":906.3000001907349},{"name":"bigPipe.activity-panel-pipe-id.end","time":908.5},{"name":"activityTabFullyLoaded","time":964.0999994277954}],"measures":[],"correlationId":"6c842576d4f92b","effectiveType":"4g","downlink":9.2,"rtt":0,"serverDuration":89,"dbReadsTimeInMs":10,"dbConnsTimeInMs":17,"applicationHash":"9d11dbea5f4be3d4cc21f03a88dd11d8c8687422","experiments":[]}}